src/pages/strategy/themes/dark.css
/* ... */
/* COMMONS: HELP BOX
-------------------------------*/
.page_help {
	width:660px;
	min-height:200px;
	background:#333;
	background-position:bottom right;
	background-repeat:no-repeat;
	padding:5px 10px;
	display:none;
	margin:0px 0px 10px 20px;
}
.page_help .help_q {
	height:16px;
	line-height:16px;
	font-size:12px;
	font-weight:bold;
	margin:0px 0px 3px 0px;
	color:#ffffff;
}
.page_help .help_a {
	line-height:14px;
	font-size:12px;
	margin:0px 0px 10px 10px;
	color:#9e9e9e;
}

.page_help .help_more {
	height:16px;
	line-height:16px;
	font-size:12px;
	font-weight:bold;
	margin:0px 0px 0px 0px;
	text-align:right;
}
.page_help .help_more a {
	color:#999999;
}
/* COMMONS: HELP
-------------------------------*/
.page_panel {
	width:680px;
	min-height:30px;
	background:#131313;
	padding:8px 10px 5px 10px;
	margin:0px 0px 0px 10px;
	border-bottom:1px solid #444444;
	color:#cccccc;
}
.page_panel ul.pagination {
	margin:0px;
}
.page_panel ul.pagination li a {
	border:0px none;
	background:#333333;
	color:#fff;
	margin:0px 1px 0px;
}
.page_panel ul.pagination li a:hover {
	background:#000000;
	color:#ffcc00;
}
.page_padding {
	width:700px;
	padding:0px 10px 0px;
}
/* COMMONS: SECTIONS
-------------------------------*/
.page_section {
	height:26px;
	line-height:24px;
	font-size:18px;
	border-bottom:1px solid #444444;
	color:#ccc;
	margin:10px 0px 10px 0px;
}
.page_body {
	margin:0px 0px 20px 0px;
}
/* COMMONS: FLOAT TOOLBAR
-------------------------------*/
.float_toolbar {
	position:fixed;
	bottom:5px;
	right:0px;
	text-decoration:none;
	color:#ffffff;
	font-size:12px;
	font-weight:bold;
	display:none;
}
.float_toolbar .back_to_top {
	background-color:#1e1e1e;
	border-left: 1px solid #000000;
	border-top: 1px solid #000000;
	border-bottom: 1px solid #000000;
	border-radius:10px 0px 0px 10px;
	padding:5px 5px 5px 5px;
	margin:0px 0px 3px 0px;
}
.float_toolbar .back_to_top:hover {
	background-color:#000000;
}
.float_toolbar .reload {
	background-color:#1e1e1e;
	border-left: 1px solid #000000;
	border-top: 1px solid #000000;
	border-bottom: 1px solid #000000;
	border-radius:10px 0px 0px 10px;
	padding:5px 5px 5px 5px;
	margin:0px 0px 3px 0px;
}
.float_toolbar .reload:hover {
	background-color:#000000;
}

/* OVERRIDES
-------------------------------*/
/* Profile */
.tab_profile .stat_head {
	border-radius:0px !important;
}
.tab_profile .stat_sortie .stat_head {
	background:#5b0202 !important;
}
.tab_profile .stat_pvp .stat_head {
	background:#004100 !important;
}
.tab_profile .stat_exped .stat_head {
	background:#1b1b6b !important;
}
/* Resources */
.tab_resources .legend_color {
	border:1px solid #000000;
}
/* Consumables */
.tab_consumables .legend_color {
	border:1px solid #000000;
}
/* Showcase */
.tab_showcase .stype_box {
	height:128px !important;
	border-radius:0px !important;
	background:none !important;
}
.tab_showcase .stype_title {
	background:none !important;
	font-size:14px !important;
	color:#fff !important;
	height:24px !important;
	line-height:24px !important;
}
.tab_showcase .stype_contents {
	padding:2px !important;
}
.tab_showcase .show_ship {
	width:64px !important;
	height:100px !important;
	margin:0px 0px 2px 2px !important;
	border-radius:0px !important;
	position:relative;
	padding:0px !important;
	pointer-events: none;
}
.tab_showcase .show_ship .ship_pic {
	width:64px !important;
	height:100px !important;
	position:absolute;
	top:0px;
	left:0px;
	border-radius:0px !important;
	margin:0px !important;
}
.tab_showcase .show_ship .ship_pic img {
	image-rendering: auto;
	width:120px !important;
	height:120px !important;
	position:relative;
	margin:-15px 0px 0px -28px;
	-webkit-mask-image:-webkit-linear-gradient(top, rgba(34,34,34,1) 40%,rgba(34,34,34,0) 90%);
}
.tab_showcase .show_ship .ship_name {
	display:none;
}
.tab_showcase .show_ship .ship_level {
	width:64px;
	text-align: center;
	position:absolute;
	bottom:0px;
	left:0px;
	height:24px;
	line-height:24px;
	font-size:14px;
	/*font-weight:bold;*/
	color:#fff;
	text-shadow:2px 2px 3px #000;
}
.tab_showcase .show_ship .ship_mods {
	display:none;
}
.tab_showcase .show_gear .gear_stat_icon img {
	-webkit-filter: invert(100%);
}
/* Ledger */
.tab_overlodger .filterBox {
	width:120px;
	margin:0px !important;
	background:none;	
}
.tab_overlodger .filterBox.filter_base {
	width: 180px;
}
.tab_overlodger .filterBox .filterRangeLen input {
	background:#000000;
}
.tab_overlodger .filterBox .filterRangeLen input[disabled] {
	color:#555555;
}
.tab_overlodger .filterBox.filter_reset button {
	border:1px solid #444444;
	background:#121212;
	height:24px;
	margin:0px 0px 4px 0px;
}
.tab_overlodger .filterBox.filter_reset button:hover {
	background:#000000;
}
.tab_overlodger .lodger-statistics {
	
}
.tab_overlodger .lodger-data {
	border-bottom:1px solid #555555;
	margin:0px !important;
	padding:10px 0px 10px 0px !important;
}
.tab_overlodger .lodger-data .info .rating {
	display:none;
}
.tab_overlodger .lodger-data .info .type {
	font-size:13px !important;
	color:#fff;
}
.tab_overlodger .lodger-data .bar {
	height: 6px;
}
.tab_overlodger .lodger-data .bar.INV,
.tab_overlodger .lodger-data .bar.NM {
	background-color: #dddddd;
	margin:5px 0px 0px 0px !important;
}
.tab_overlodger .lodger-data .materials .material,
.tab_overlodger .lodger-data .materials .material.over:before {
	
}
/* Ship List */
.tab_ships .massSelect .hover {
	color:#ffffff
}
.tab_ships .massSelect .hover.on {
	color:#ffcc00;
	background: #5f5f5f;
	border-radius:0px !important;
}
.tab_ships .massSelect dl{
	width: 218px !important;
}
.tab_ships .ship_header .ship_stat img {
	-webkit-filter: invert(100%);
}
.tab_ships .filters .ship_filter_type:hover {
	background:#555555;
}
.tab_ships .advanced_sorter .adv_sorter:hover {
	background:#555555;
}
.tab_ships .advanced_sorter .filter_box {
	border:1px solid #888888;
}
.tab_ships .advanced_sorter .filter_check {
	background:#ffffff;
}
.tab_ships .ship_filter_type .filter_box {
	border:1px solid #888888;
}
/* ... */

